--- a/Resources/Private/Templates/Ajaxsearch.html
+++ b/Resources/Private/Templates/Ajaxsearch.html
@@ -1,7 +1,7 @@
 {namespace myhelper=ChrisGruen\RealtyManager\ViewHelpers}
 <div class="row list-immo-row pb-3">
 	<div class="col">
-		<div class="show-count-obj"> ({count_objects} objekte)</div>
+		<div class="show-count-obj"> ({count_objects} Objekte)</div>
 	</div>
 </div>
 
