layout html email

--- a/Resources/Private/Layouts/SystemEmail.html
+++ b/Resources/Private/Layouts/SystemEmail.html
@@ -337,8 +337,8 @@
                         <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="textContentContainer">
                             <tbody>
                             <tr>
-                                <td valign="top" class="image" align="center" style="padding: 0px 36px; padding-bottom: 20px; color: #222222;text-align: center;">
-                                    <img src="EXT:realty_manager/Resources/Public/Images/in-halle-zuhause_logo.png" absolute="1" alt="Logo AtHome" height="30" />
+                                <td valign="top" class="image" align="center" style="padding: 0px 36px; padding-bottom: 20px; color: #222222;text-align: center;">  
+                                	<img src="{baseUrl}{f:uri.resource(extensionName: 'realty_manager', path: 'Images/in-halle-zuhause_logo.png')}" alt="Logo In Halle zu Hause" height="40" />                                    
                                 </td>
                             </tr>
                             <tr>
