--- a/Resources/Private/Templates/Email/ImportObjects.html
+++ b/Resources/Private/Templates/Email/ImportObjects.html
@@ -4,5 +4,6 @@
     <f:if condition="{introduction}">
         <h4>{introduction}</h4>
     </f:if>
+    <h4>{bodyHeader}</h4>
     <f:format.html>{bodyContent}</f:format.html>
 </f:section>
