--- a/Resources/Private/Templates/RealtyManager/Startform.html
+++ b/Resources/Private/Templates/RealtyManager/Startform.html
@@ -3,6 +3,7 @@
       data-namespace-typo3-fluid="true">
 
 <div class="start-form">
+<f:base />
 	<h3 class="element-subheader">Finde Dein neues Zuhause:</h3><br />
 	<div class="container backendlayout-2_columns_50_50">
 	    <div class="section-row">
