layout html email

--- a/Resources/Private/Layouts/SystemEmail.html
+++ b/Resources/Private/Layouts/SystemEmail.html
@@ -338,7 +338,7 @@
                             <tbody>
                             <tr>
                                 <td valign="top" class="image" align="center" style="padding: 0px 36px; padding-bottom: 20px; color: #222222;text-align: center;">  
-                                	<img src="{baseUrl}{f:uri.resource(extensionName: 'realty_manager', path: 'Images/in-halle-zuhause_logo.png')}" alt="Logo In Halle zu Hause" height="40" />                                    
+                                	<img src="{baseUrl}{f:uri.resource(extensionName: 'realty_manager', path: 'Images/mail_logo.png')}" alt="Logo In Halle zu Hause" height="40" width="140" />                                    
                                 </td>
                             </tr>
                             <tr>
