--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -18,12 +18,14 @@
 		<label for="city">Stadt</label>
 	    <f:form.select name="city"  class="form-control form-control-sm select-city" options="{cities}" optionValueField="key" optionLabelField="value" value="{city}" />
 	</div>
-	<div id="ajaxSelectDistrictResult">
-		<div class="form-group">
-			<label for="district">Stadtteil</label>
-		    <f:form.select name="district" class="form-control form-control-sm" options="{districts}" optionValueField="key" optionLabelField="value" value="{district}" />
+	<f:if condition="{showDistricts}">	
+		<div id="ajaxSelectDistrictResult">
+			<div class="form-group form-districts">
+				<label for="district">Stadtteil</label>
+			    <f:form.select name="district" class="form-control form-control-sm" options="{districts}" optionValueField="key" optionLabelField="value" value="{district}" />
+			</div>
 		</div>
-	</div>
+	</f:if>
 	<div class="form-group">
 		<label class="label-radio" for="furnished">Möbliert</label>
 		<div class="form-check form-check-inline">
@@ -99,7 +101,7 @@
 		<f:form.select name="rent_to" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{price_last}" />
 	</div>
 	<div class="form-group">
-		<label for="living_area">Mietfläche:</label><br />
+		<label for="living_area">MietflÃ¤che:</label><br />
 		<span style="padding-left: 5px; padding-right: 5px;">von:</span>
 		<f:form.select name="living_area_from" class="selectcol" options="{areas}" optionValueField="key" optionLabelField="value" value="{search.living_area_from}" />
 		<span style="padding-left: 5px; padding-right: 5px;">bis:</span>
