--- a/Resources/Private/Templates/RealtyManager/Form.html
+++ b/Resources/Private/Templates/RealtyManager/Form.html
@@ -101,7 +101,7 @@
 		<f:form.select name="rent_to" class="selectcol" options="{rentprices}" optionValueField="key" optionLabelField="value" value="{price_last}" />
 	</div>
 	<div class="form-group">
-		<label for="living_area">MietflÃ¤che:</label><br />
+		<label for="living_area">Mietfläche:</label><br />
 		<span style="padding-left: 5px; padding-right: 5px;">von:</span>
 		<f:form.select name="living_area_from" class="selectcol" options="{areas}" optionValueField="key" optionLabelField="value" value="{search.living_area_from}" />
 		<span style="padding-left: 5px; padding-right: 5px;">bis:</span>
