prepare ajax paging

--- a/Resources/Private/Templates/Ajaxsearch.html
+++ b/Resources/Private/Templates/Ajaxsearch.html
@@ -11,11 +11,11 @@
 			<f:then>
 				<f:if condition="{objects -> f:count()} > {itemsPerPage}">
 					<f:then>
-						<f:widget.paginate objects="{objects}" as="subObjects" configuration="{itemsPerPage: itemsPerPage, insertAbove: 1, insertBelow: 1, maximumNumberOfLinks: 5}">
-							<f:for each="{subObjects}" as="object">
-								<f:render partial="List/Item" arguments="{_all}" />
-							</f:for>
-						</f:widget.paginate>
+						Ajax-Pagination
+						<f:for each="{objects}" as="object">
+							<f:render partial="List/Item" arguments="{_all}" />
+						</f:for>
+						<f:asset.script identifier="ajax_paging" src="EXT:realty_manager/Resources/Public/JavaScript/AjaxPagination.js" />
 					</f:then>
 					<f:else>
 						<f:for each="{objects}" as="object">
@@ -35,4 +35,4 @@
 		Keine Objekte vorhanden!
 	</f:else>
 </f:if>
-<f:asset.script identifier="AjaxPagination" src="EXT:realty_manager/Resources/Public/JavaScript/AjaxPagination.js" />
+
