--- a/Resources/Private/Templates/RealtyManager/List.html
+++ b/Resources/Private/Templates/RealtyManager/List.html
@@ -35,5 +35,5 @@
 		</f:else>
 	</f:if>
 </div>
-	
+<f:asset.script identifier="ajax_paging" src="EXT:realty_manager/Resources/Public/JavaScript/AjaxPagination.js" />
 </html>
